--- a/pom.xml
+++ b/pom.xml
@@ -31,11 +31,6 @@
             <version>11.1.2</version>
         </dependency>
         <dependency>
-            <groupId>io.github.eckig.grapheditor</groupId>
-            <artifactId>grapheditor-core</artifactId>
-            <version>19.0.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
             <version>${junit.version}</version>
@@ -48,9 +43,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>net.java.dev.javacc</groupId>
-            <artifactId>javacc</artifactId>
-            <version>7.0.13</version>
+            <groupId>com.brunomnsilva</groupId>
+            <artifactId>smartgraph</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
